remove python dependency by running kex jar directly